 * More documentation for service watch
 * Eliminated some unncessary warnings
 * Better help in the web admin UI

Bug Fixes
 * 802.1X broken on Cisco Catalyst 3750 (#1286)
 * Pop-Up windows are too small (#1078)
 * RedHat Enterprise Linux 6 installation instructions
 * Encoding on the remediation pages and on the release pages (scan, access enabled)

Translations
 * Minor update to French (fr) translation
 * Updated Spanish (es) translation (Thanks to Juan Camilo Valencia)

--------------------------------------------------------------------------------
Version 3.0.2 released on 2011-10-24

SECURITY
 * Cross-site scripting (XSS) in Captive Portal and Web Admin login. CVE-2011-4067 (Reported by Matthew Daley, #1292 and #1296)
 * LDAP Authentication bypass in Web Admin login. CVE-2011-4068 (Reported by Matthew Daley, #1293)
 * LDAP Injection in Web Admin login. CVE-2011-4069 (Reported by Matthew Daley, #1293)
 * Shared session state between Captive Portal and Web Admin. CVE-2011-4070 (Reported by Matthew Daley, #1294)
 * Command injection in guest handling in the Captive Portal and Web Admin. CVE-2011-4071 (Reported by Matthew Daley, #1295)

New Hardware Support
 * Trapeze Wireless Controllers

Enhancements
 * Wireless deauthentication in bridge mode for DLink DWS, HP MSM and Motorola controllers
 * Authentication modules now hold authentication error strings and can set node attributes on authentication
 * Several new configuration parameters to control guest signup, categorization and access durations
 * Improved validation when creating/importing multiple guest accounts.
 * Captive portal's email confirmation page is now reachable from the management interface by default
 * Configuration files ownership validation on start-up and in `pfcmd checkup`
 * Inline firewall changes: prevent registered users from reaching the captive portal
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)
 * Minor usability improvements