@@ -27,6 +27,7 @@ Bug Fixes
  * Pop-Up windows are too small (#1078)
  * RedHat Enterprise Linux 6 installation instructions
  * Encoding on the remediation pages and on the release pages (scan, access enabled)
+ * SNMPv3 issues affecting all the Cisco wired product line (#1284)
 
 Translations
  * Minor update to French (fr) translation
